Closed Bug 84054 Opened 23 years ago Closed 23 years ago

Mac: Cannot open anymore an appledouble/applesingle attachment

Categories

(MailNews Core :: MIME, defect, P1)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: bugzilla, Assigned: bugzilla)

References

Details

(Whiteboard: [nsbeta1+])

Attachments

(2 files)

When I double click on an appledouble attachment, this one is not correctly
saved on the disk and therefore the file is useless.

Also, when you open a applesingle attachment, this one is correctly saved to the
disk but the signature of the file is wrong, therefore you cannot use (open) it
either (especially if it's an application).
nominating nsbeta1. This append in both 0.9.1 or 0.9.2 build.
Status: NEW → ASSIGNED
Keywords: nsbeta1
putting on 0.9.1 radar
Priority: -- → P1
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9.1
Attached patch proposed fix, v1Splinter Review
The first part of the fix is to test if the content-type is either
MULTIPART_APPLEDOUBLE (appledouble) or APPLICATION_APPLEFILE (applesingle).
Before we were testing only APPLICATION_APPLEFILE which is also the type of the
first part of an appledouble attachment.

The second part of the fix is to not considere a file as not good if it doesn't
have a data fork when we are processing an applesingle attachment. That was
preventing us from setting the finder info of the file.
r=varada
sr=bienvenu
Fixed and checked in (TRUNK and BRANCH)
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Blocks: 83989
Using branch build 2001-06-06 and trunk build 2001-06-13 on mac, I sent myself a
quicktime file using 4.7 (appledouble) and an eudora pure voice attachment with
Applesingle selected for sending attachments.  When I opened my mail with builds
above and double-clicked on the attachment then selected save, the files saved
correctly.  Viewing the info for the appledouble file and original file they
were exactly the same.  Double-clicking on the saved applesingle attachment
brought up the pure voice player.   Note, doing a save as using context menu
didn't save either of these correctly.  I think there is a separate bug for
that.  This is verified.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: