Fix for bug 84054. Appledouble files weren't correctly detected and AppleSingle weren't correctly generated if they don't have a datafork. R=varada, SR=bienvenu, A=chofmann